--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,9 +1,9 @@
-<h1>Create your account</h1>
-
-<%= form_with model: @user do |form| %>
-<%= form.text_field :email_address %>
-<%= form.password_field :password %>
-<%= form.password_field :password_confirmation %>
+<%= form_with model: @profile do |form| %>
+<%= form.text_field :full_name, required: true, autofocus: true, autocomplete: "name", placeholder: "Enter your name" %>
+<%= form.text_field :address, required: true, autocomplete: "address", placeholder: "Enter your address" %>
+<%= form.text_field :city, required: true, autocomplete: "city", placeholder: "Enter your city" %>
+<%= form.text_field :state, required: true, autocomplete: "state", placeholder: "Enter your state" %>
+<%= form.text_field :zip, required: true, autocomplete: "zip_code", placeholder: "Enter your zip code" %>
+<%= form.rich_text_area :bio, required: true, placeholder: "Enter your bio" %>
 <%= form.submit %>
-
 <% end %>
