--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,10 +4,28 @@
 <p>No profile found</p>
 <%= link_to "Create your profile", new_profiles_path %>
 <% else %>
-<%= @profile.full_name %>
-<%= @profile.address %>
-<%= @profile.city %>
-<%= @profile.state %>
-<%= @profile.zip %>
-<%= @profile.bio %>
+<div>
+  <h2>Name</h2>
+  <%= @profile.full_name %>
+</div>
+<div>
+  <h2>Address</h2>
+  <%= @profile.address %>
+</div>
+<div>
+  <h2>City</h2>
+  <%= @profile.city %>
+</div>
+<div>
+  <h2>State</h2>
+  <%= @profile.state %>
+</div>
+<div>
+  <h2>Zip</h2>
+  <%= @profile.zip %>
+</div>
+<div>
+  <h2>Bio</h2>
+  <%= @profile.bio %>
+</div>
 <% end %>
