--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,7 +9,7 @@
       <p class="title"><%= @profile.full_name %></p>
       <p class="subtitle"><%= @profile.address %>, <%= @profile.city %>, <%= @profile.state %></p>
       <div class="tags">
-        <% @profile.instruments.each if @profile.instruments.any? do |instrument| %>
+        <% @profile.instruments.each do |instrument| %>
         <%= tag.div(instrument.name, class: "tag") %>
         <% end %>
       </div>
