--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -27,31 +27,37 @@
   </div>
 
   <h2 class="title mt-4">Vocals</h2>
-  <div class="mt-4 is-flex is-flex-wrap-wrap">
+  <div class="mt-4 checkboxes">
     <% Instrument.where("name LIKE ?", "%Vocal%").order(:name).each do |instrument| %>
     <div class="mt-4 mr-4">
-      <%= form.check_box :instrument_ids, { multiple: true }, instrument.id, nil %>
-      <%= form.label instrument.name %>
+      <label class="checkbox">
+        <%= form.check_box :instrument_ids, { multiple: true }, instrument.id, nil %>
+        <%= instrument.name %>
+      </label>
     </div>
     <% end %>
   </div>
 
   <h2 class="title mt-4">Instruments</h2>
-  <div class="mt-4 is-flex is-flex-wrap-wrap">
+  <div class="mt-4 checkboxes">
     <% Instrument.where.not("name LIKE ?", "%Vocal%").order(:name).each do |instrument| %>
     <div class="mt-4 mr-4">
-      <%= form.check_box :instrument_ids, { multiple: true }, instrument.id, nil %>
-      <%= form.label instrument.name %>
+      <label class="checkbox">
+        <%= form.check_box :instrument_ids, { multiple: true }, instrument.id, nil %>
+        <%= instrument.name %>
+      </label>
     </div>
     <% end %>
   </div>
 
   <h2 class="title mt-4">Styles</h2>
-  <div class="mt-4 is-flex is-flex-wrap-wrap">
+  <div class="mt-4 checkboxes">
     <% Style.order(:name).each do |style| %>
     <div class="mt-4 mr-4">
-      <%= form.check_box :style_ids, { multiple: true }, style.id, nil %>
-      <%= form.label style.name %>
+      <label class="checkbox">
+        <%= form.check_box :style_ids, { multiple: true }, style.id, nil %>
+        <%= style.name %>
+      </label>
     </div>
     <% end %>
   </div>
