--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,10 +1,44 @@
-<h1>Create your account</h1>
+<div class="is-flex is-flex-direction-column is-justify-content-center is-align-items-center">
+  <svg width="500" height="200" viewBox="0 0 500 200" xmlns="http://www.w3.org/2000/svg">
+    <!-- Texto estilizado -->
+    <text x="50%" y="50%" font-size="60" font-family="sans-serif" fill="black" text-anchor="middle" dominant-baseline="middle">
+      NORDIC JAM
+    </text>
 
-<%= form_with model: @user, url: registration_url, class: "contents" do |form|  %>
-<%= form.text_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address" %>
-<%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter your password" %>
-<%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Confirm your password" %>
-<%= form.submit %>
-<% end %>
+    <!-- Linhas rúnicas personalizadas -->
+    <path d="M80 100 L100 40 L120 100" stroke="black" stroke-width="6" /> <!-- N -->
+    <path d="M140 40 L140 100" stroke="black" stroke-width="6" /> <!-- I -->
+    <path d="M160 100 L180 40 L200 100" stroke="black" stroke-width="6" /> <!-- R -->
+    <path d="M220 40 L220 100 L250 100" stroke="black" stroke-width="6" /> <!-- D -->
+    <path d="M270 40 L270 100" stroke="black" stroke-width="6" /> <!-- I -->
+    <path d="M290 40 L310 40 L330 100" stroke="black" stroke-width="6" /> <!-- C -->
 
-<%= link_to "Already have an account? Sign in", new_session_path %>
+    <path d="M360 40 L360 100" stroke="black" stroke-width="6" /> <!-- J -->
+    <path d="M380 100 L400 40 L420 100" stroke="black" stroke-width="6" /> <!-- A -->
+    <path d="M440 40 L460 100 L480 40" stroke="black" stroke-width="6" /> <!-- M -->
+  </svg>
+
+  <h1 class="title mt-4">Create your account</h1>
+
+  <%= form_with model: @user, url: registration_url, class: "contents" do |form|  %>
+  <div class="mt-4">
+    <%= form.label :email_address, "Email address" %>
+    <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", class: "input" %>
+  </div>
+  <div class="mt-4">
+    <%= form.label :password, "Password" %>
+    <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter your password", class: "input" %>
+  </div>
+  <div class="mt-4">
+    <%= form.label :password_confirmation, "Confirm password" %>
+    <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Confirm your password", class: "input" %>
+  </div>
+  <div class="mt-4">
+    <%= form.submit "Create account", class: "button is-primary" %>
+  </div>
+  <% end %>
+
+  <div class="mt-4">
+    <%= link_to "Already have an account? Sign in", new_session_path %>
+  </div>
+</div>
