--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,10 +1,3 @@
-<% if @profile.nil? %>
-<div style="height: 75vh;" class="is-flex is-flex-direction-column is-align-items-center is-justify-content-center is-align-content-center">
-  <h1 class="title">No profile found</h1>
-  <%= link_to "Create your profile", new_profile_path, class: "button is-primary" %>
-</div>
-<% else %>
-
 <section class="hero is-primary is-small">
   <div class="hero-body">
     <div class="container">
@@ -14,6 +7,7 @@
         <% @profile.instruments.each do |instrument| %>
         <%= tag.div(instrument.name, class: "tag") %>
         <% end %>
+        <%= link_to "+", profile_instruments_path(@profile), class: "button is-small is-secondary" %>
       </div>
     </div>
   </div>
@@ -21,7 +15,7 @@
 <div class="container">
   <section class="section">
     <div class="content">
-      <h2>Styles</h2>
+      <h2>Styles <%= link_to "Edit", profile_styles_path(@profile), class: "button is-small" %></h2>
       <div class="tags">
         <% @profile.styles.each do |style| %>
         <%= tag.div(style.name, class: "tag") %>
@@ -32,7 +26,7 @@
 
   <section class="section">
     <div class="content">
-      <h2>Influences</h2>
+      <h2>Influences <%= link_to "Edit", profile_influences_path(@profile), class: "button is-small" %></h2>
       <div class="tags">
         <% @profile.influences.each do |influence| %>
         <%= tag.div(influence.name, class: "tag") %>
@@ -53,5 +47,3 @@
     </div>
   </section>
 </div>
-
-<% end %>
