--- a/app/assets/stylesheets/bulma.css
+++ b/app/assets/stylesheets/bulma.css
@@ -3,3 +3,19 @@
 main {
   padding: 1rem;
 }
+
+.profile-edit-button {
+  position: absolute;
+  right: 2px;
+  top: -2rem;
+}
+
+.profile-avatar {
+  aspect-ratio: auto;
+  height: 128px;
+}
+
+.profile-avatar--big {
+  height: 256px;
+  aspect-ratio: auto;
+}
