fix: fixing some routing problems for new profiles

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -36,7 +36,7 @@
 
     <div class="mt-4">
       <%= form.submit "Update Profile", class: "button is-primary" %>
-      <%= link_to "Cancel", profile_path(@profile), class: "button is-secondary ml-4" %>
+      <%= link_to "Cancel", profiles_path(@profile), class: "button is-secondary ml-4" %>
     </div>
     <% end %>
   </div>
