--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -21,16 +21,11 @@
       </div>
     </div>
     <div class="mt-4">
-      <%= form.label :address %>
-      <%= form.text_field :address, required: true, autocomplete: "address", placeholder: "Enter your address", class: "input" %>
-    </div>
-    <div class="mt-4">
       <%= form.label :city %>
-      <%= form.text_field :city, required: true, autocomplete: "city", placeholder: "Enter your city", class: "input" %>
-    </div>
-    <div class="mt-4">
-      <%= form.label :state %>
-      <%= form.text_field :state, required: true, autocomplete: "state", placeholder: "Enter your state", class: "input" %>
+      <br />
+      <div class="select">
+        <%= form.select :city, options_for_select(city_of_country(profile.country)) %>
+      </div>
     </div>
     <div class="mt-4">
       <%= form.label :zip %>
@@ -48,3 +43,30 @@
     <% end %>
   </div>
 </div>
+
+<script>
+  const countrySelectElement = document.getElementById('profile_country')
+
+  const cities = {
+    'sweden': "<%= sweden_city_list %>".split(','),
+    'denamark': "<%= denamark_city_list %>".split(','),
+    'finland': "<%= finland_city_list %>".split(','),
+    'norway': "<%= norway_city_list %>".split(','),
+  }
+
+  function onChangeCountry(e) {
+    const cityList = cities[e.target.value]
+    const profilecity = document.getElementById('profile_city')
+    
+    while (profilecity.lastElementChild)
+      profilecity.removeChild(profilecity.lastElementChild)
+
+    cityList.map(city => {
+      const option = document.createElement('option')
+      option.innerHTML = city 
+      profilecity.appendChild(option)
+    })
+  }
+
+  countrySelectElement.addEventListener('change', onChangeCountry)
+</script>
