--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -17,14 +17,24 @@
       <%= form.label :country %>
       <br />
       <div class="select">
-        <%= form.select :country, options_for_select(country_list, selected: profile.country) %>
+        <%= form.select :country, 
+            {},
+            {},
+            { data: { 
+              controller: "country", 
+              action: "change->country#onCountryChange", 
+              "country-city-outlet": "#profile_city",
+              "country-country-value": profile.country } }
+        %>
       </div>
     </div>
     <div class="mt-4">
       <%= form.label :city %>
       <br />
       <div class="select">
-        <%= form.select :city, options_for_select(city_of_country(profile.country), selected: profile.city) %>
+        <%= form.select :city, {}, 
+        {}, 
+        { data: { controller: "city", "city-city-value": profile.city, "city-country-value": profile.country } } %>
       </div>
     </div>
     <div class="mt-4">
@@ -39,28 +49,3 @@
     <% end %>
   </div>
 </div>
-
-<script>
-  function onChangeCountry(e) {
-    const cities = {
-      'sweden': "<%= sweden_city_list %>".split(','),
-      'denmark': "<%= denmark_city_list %>".split(','),
-      'finland': "<%= finland_city_list %>".split(','),
-      'norway': "<%= norway_city_list %>".split(','),
-    }
-
-    const cityList = cities[e.target.value]
-    const profileCity = document.getElementById('profile_city')
-
-    while (profileCity.lastElementChild)
-      profileCity.removeChild(profileCity.lastElementChild)
-
-    cityList.map(city => {
-      const option = document.createElement('option')
-      option.innerHTML = city
-      profileCity.appendChild(option)
-    })
-  }
-
-  document.getElementById('profile_country').addEventListener('change', onChangeCountry)
-</script>
