test: adding system tests

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -54,7 +54,7 @@
     </div>
     <div class="mt-4">
       <%= form.label :bio %>
-      <%= form.rich_text_area :bio, required: true, placeholder: "Enter your bio", class: "textarea" %>
+      <%= form.rich_text_area :bio, required: false, placeholder: "Enter your bio", class: "textarea" %>
     </div>
 
     <div class="mt-4">
